2004-03-02  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/sandbox.scm (make-sandbox-module):
	fixed a module dependency. now use kahua.plugin.
	disabled exit, sys-exit, sys-abort bindings in sandbox module. 

2004-03-01  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/pdf/interp.scm (html-environment): added kahua specific
	tags, form/cont, a/cont and so on.
	* src/kahua/pdf.scm, src/kahua/pdf/*: added pdf library.
	* src/kahua/server.scm:
	(add-interp!, get-interp, kahua-render-proc): separete interp-html-rec.
	(interp-pdf): added. it generates PDF.
	* src/kahua.scm: added kahua.pdf.
	* src/Makefile.in (INSTALL_DIRS, SCMFILES): install kahua/pdf/*.scm.

2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in : fixed to stop restarting worker which doesn't
	run over 60 sec.

2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* examples/foldlist/foldlist.kahua : added foldlist sample program.
	* examples/Makefile : added foldlist.kahua entry
	* test/Makefile, test/foldlist.scm : added test for foldlist.kahua
	
2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

        * src/kahua-spvr.in : support restarting the unexpected terminated
        worker.
        * src/kahua/config.scm : added "auto-restart" slot to <kahua-config>
        to enable above support.
        * cgi/kahua.cgi (compose-reply): changed default content-type as
        "text/html; charset=euc-jp".	

2004-02-29  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/elem.scm: added functional tags extra-header: and
	extra-header/
	* examples/login/login.kahua: use extra-header: instead of symbol.

2004-02-29  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-db-open-dbi): handles
	<dbi-exception> correctly.
	* test/persistence-dbi.scm : handles <dbi-exception> correctly.

2004-02-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin.in : add moduser command that changes password.
	* src/kahua/developer.scm :